Feat: 초기 네비게이션 바 구현
- Navbar 초기 구현 완료 (Navbar.jsx)
- 모바일 화면에 비율을 맞춰주는 setScreenSize() 메서드 추가 (App.js)

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 .nav-menu {
-  background-color: #dadada;
-  width: 50%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
   right: -100%; /* 오른쪽으로 숨겨짐 */
+  transition: 300ms;
 }
 
 .nav-menu.active {
   right: 0; /* 활성화되면 오른쪽에서 슬라이드하여 나타남 */
   transition: 300ms;
+}
+
+:root {
+  --vh: 100%;
+}
+
+.nav_top_padding {
+  padding-top: 60px;
+}
+
+.mobile_h_fit {
+  height: calc(var(--vh, 1vh) * 100);
 }
