Feat: 메인 페이지 초기 구현
- 메인 페이지 초기 구현 완료 (MainPage.jsx)
- tailwind-scrollbar-hide 패키지 설치 (스크롤바 숨김 처리)
- 기존 'btn_light_blue' 색상 이름 'btn_middle_blue'로 변경 (tailwind.config.js)
- 'btn_light_blue': "#779CF9" 색상 추가

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,4 @@
-.nav-menu {
-  right: -100%; /* 오른쪽으로 숨겨짐 */
-  transition: 300ms;
-}
-
-.nav-menu.active {
-  right: 0; /* 활성화되면 오른쪽에서 슬라이드하여 나타남 */
-  transition: 300ms;
-}
+/* Common Styles */
 
 :root {
   --vh: 100%;
@@ -18,4 +10,28 @@
 
 .mobile_h_fit {
   height: calc(var(--vh, 1vh) * 100);
+}
+
+
+/* Paticular Styles */
+
+.nav-menu {
+  right: -100%;
+  transition: 300ms;
+}
+
+.nav-menu.active {
+  right: 0;
+  transition: 300ms;
+}
+
+.option-icon-rotate-180 {
+  transition: 300ms;
+  transform: rotate( -180deg );
+}
+
+.main-option-menu-slide-in {
+  margin-top: 0em;
+  transition-property: margin-top;
+  transition-duration: 300ms;
 }
