Feat: 스낵 바 구현
- 스낵 바 구현 (Snackbar.jsx)
- Recoil을 사용하여 스낵바 메시지, 스낵 바 열림 여부 관리
  (store/atoms.js, Snackbar.jsx)
- 네비게이션 바의 회원 탈퇴 버튼 클릭 시 스낵 바가 띄워지도록 테스트
  (Navbar.jsx)

--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,15 @@
 .Dropdown-arrow {
   background-color: #cfcfcf;
 }
+
+.snackbar-fade-in {
+    opacity: 1;
+    transition: 0.2s;
+}
+
+.snackbar-hide {
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: 0.2s;
+}
