Fix: 네비게이션 바 버그 해결
- 종종 로그인 페이지에서 네비게이션 바가 사라지지 않는 버그 해결 (Navbar state -> Recoil을 통해 관리)
- 로그인 페이지로 이동할 때 버벅이는 현상 해결 (Recoil을 사용하면서
  새로고침 할 필요 사라짐. 사이드바 닫을 때 애니메이션 삭제)
- ErrorPage, LoginPage에 useLoginCheck 함수 호출부 추가

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 .nav-menu {
   right: -100%;
-  transition: 300ms;
+  /* transition: 300ms;*/
 }
 
 .nav-menu.active {
@@ -101,4 +101,9 @@
   height: 0;
   overflow: hidden;
   transition: 0.2s;
+}
+
+.navbar-hide {
+  height: 0;
+  overflow: hidden;
 }
